Aggiuti gli esperimenti di Giulia, sezione ancora da finire

--- a/deviant.bib
+++ b/deviant.bib
@@ -6,6 +6,22 @@
 
 %% Saved with string encoding Unicode (UTF-8)
 
+@inproceedings{DBLP:conf/ssci/DeboisS15,
+  author    = {S{\o}ren Debois and
+               Tijs Slaats},
+  title     = {The Analysis of a Real Life Declarative Process},
+  booktitle = {{IEEE} Symposium Series on Computational Intelligence, {SSCI} 2015,
+               Cape Town, South Africa, December 7-10, 2015},
+  pages     = {1374--1382},
+  publisher = {{IEEE}},
+  year      = {2015},
+  url       = {https://doi.org/10.1109/SSCI.2015.196},
+  doi       = {10.1109/SSCI.2015.196},
+  timestamp = {Wed, 16 Oct 2019 14:14:56 +0200},
+  biburl    = {https://dblp.org/rec/conf/ssci/DeboisS15.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @inproceedings{DBLP:conf/aaai/BrewkaD0S15,
   title = {asprin: Customizing Answer Set Preferences without a Headache},
   author = {Brewka, Gerhard and Delgrande, James P. and Romero, Javier and Schaub, Torsten},
