Clingo and ASP references

--- a/deviant.bib
+++ b/deviant.bib
@@ -902,3 +902,34 @@
   OPTdoi       = {10.1109/ICPM49681.2020.00027},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{asp-intro,
+author = {Brewka, Gerhard and Eiter, Thomas and Truszczy\'{n}ski, Miros\l{}aw},
+title = {Answer Set Programming at a Glance},
+year = {2011},
+issue_date = {December 2011},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {54},
+number = {12},
+issn = {0001-0782},
+url = {https://doi-org.libproxy.unibz.it/10.1145/2043174.2043195},
+doi = {10.1145/2043174.2043195},
+abstract = {The motivation and key concepts behind answer set programming---a promising approach to declarative problem solving.},
+journal = {Commun. ACM},
+month = {dec},
+pages = {92–103},
+numpages = {12}
+}
+
+@article{clingo,
+  title     = {Multi-shot ASP solving with clingo},
+  volume    = {19},
+  doi       = {10.1017/S1471068418000054},
+  number    = {1},
+  journal   = {Theory and Practice of Logic Programming},
+  publisher = {Cambridge University Press},
+  author    = {GEBSER, MARTIN and KAMINSKI, ROLAND and KAUFMANN, BENJAMIN and SCHAUB, TORSTEN},
+  year      = {2019},
+  pages     = {27–82}
+}
