--- a/introduction.tex
+++ b/introduction.tex
@@ -17,7 +17,7 @@ In this paper, we address the problem of inserting user preferences in the disco
 \begin{enumerate}[{(i)}]
 	\item we retain the original preference mechanism of \nd, based on the notion of model subsumption, which enables to obtain models that vary in generality/specificity, or simplicity. These preference mechanisms are considered to be domain-independent as they work on general properties of the representation and do not affect the language used to represent the model. In other words, they do not introduce any language bias (or preference) in the representation of the process model (Section \ref{sec:deviant});
 	\item we introduce two types of new preferences: the first one on the \declare patterns considered, and the second one on the activities appearing in the model. These new types of preferences introduce a clear language bias in the representation as they strongly affect the language that can be used to build the model, and are often grounded in domain dependent settings. Furthermore we show how to obtain new preferences by combining the two (Section \ref{sec:tool}); 
-	\item we show how to extend \nd to incorporate the new preferences using an \ac{ASP} \cite{2008-Lifschitz} approach via the ASPrin tool \cite{DBLP:conf/aaai/BrewkaD0S15}.   
+	\item we show how to extend \nd to incorporate the new preferences using an \ac{ASP} \cite{2008-Lifschitz} approach via the \asprin tool \cite{DBLP:conf/aaai/BrewkaD0S15}.   
 	\item We report on exploratory experiments applying an instantiation of \nd  to the data sets of \cite{DBLP:conf/bpm/SlaatsDB21} comparing results to ?????? \todo{cosa vogliamo far vedere nella valutazione? la faccimao?}.
 \end{enumerate}
 
