Description of the ASPrin implementation

--- a/deviant.bib
+++ b/deviant.bib
@@ -933,3 +933,16 @@ numpages = {12}
   year      = {2019},
   pages     = {27–82}
 }
+
+@software{zenodo:experiments,
+  author       = {Tessaris, Sergio and
+                  Di Francescomarino, Chiara and
+                  Chesani, Federico},
+  title        = {Code for the experiments},
+  month        = aug,
+  year         = 2021,
+  publisher    = {Zenodo},
+  version      = {v1.0},
+  doi          = {10.5281/zenodo.5158528},
+  url          = {https://doi.org/10.5281/zenodo.5158528}
+}
