fix: bibtex errors and doi/url repetitions

--- a/deviant.bib
+++ b/deviant.bib
@@ -15,7 +15,7 @@
   pages     = {1374--1382},
   publisher = {{IEEE}},
   year      = {2015},
-  url       = {https://doi.org/10.1109/SSCI.2015.196},
+  IGNORE_url       = {https://doi.org/10.1109/SSCI.2015.196},
   doi       = {10.1109/SSCI.2015.196},
   timestamp = {Wed, 16 Oct 2019 14:14:56 +0200},
   biburl    = {https://dblp.org/rec/conf/ssci/DeboisS15.bib},
@@ -31,27 +31,26 @@
   year = {2015}
 }
 
-%@article{deviant-tkde,
-%  author    = {Federico Chesani and
-%               Chiara Di Francescomarino and
-%               Chiara Ghidini and
-%               Daniela Loreti and
-%               Fabrizio Maria Maggi and
-%               Paola Mello and
-%               Marco Montali and
-%               Sergio Tessaris},
-%  title     = {Process discovery on deviant traces and other stranger things},
-%  journal   = {CoRR},
-%  volume    = {abs/2109.14883},
-%  year      = {2021},
-%  url       = {https://arxiv.org/abs/2109.14883},
-%  eprinttype = {arXiv},
-%  eprint    = {2109.14883},
-%  timestamp = {Mon, 04 Oct 2021 17:22:25 +0200},
-%  biburl    = {https://dblp.org/rec/journals/corr/abs-2109-14883.bib},
-%  bibsource = {dblp computer science bibliography, https://dblp.org},
-%  note = {Submitted for publication}
-%}
+@article{deviant-arxiv,
+  author    = {Federico Chesani and
+               Chiara Di Francescomarino and
+               Chiara Ghidini and
+               Daniela Loreti and
+               Fabrizio Maria Maggi and
+               Paola Mello and
+               Marco Montali and
+               Sergio Tessaris},
+  title     = {Process discovery on deviant traces and other stranger things},
+  journal   = {CoRR},
+  volume    = {abs/2109.14883},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2109.14883},
+  eprinttype = {arXiv},
+  eprint    = {2109.14883},
+  timestamp = {Mon, 04 Oct 2021 17:22:25 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2109-14883.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+}
 
 @article{deviant-tkde,
   author    = {Federico Chesani and
@@ -84,7 +83,7 @@
   pages     = {47--64},
   publisher = {Springer},
   year      = {2021},
-  url       = {https://doi.org/10.1007/978-3-030-85469-0\_6},
+  IGNORE_url       = {https://doi.org/10.1007/978-3-030-85469-0\_6},
   doi       = {10.1007/978-3-030-85469-0\_6},
   timestamp = {Thu, 02 Sep 2021 17:53:02 +0200},
   biburl    = {https://dblp.org/rec/conf/bpm/SlaatsDB21.bib},
@@ -934,15 +933,15 @@ numpages = {12}
   pages     = {27–82}
 }
 
-@software{zenodo:experiments,
+@misc{zenodo:experiments,
   author       = {Tessaris, Sergio and
                   Di Francescomarino, Chiara and
                   Chesani, Federico},
-  title        = {Code for the experiments},
+  title        = {Negdis: code for the experiments},
   month        = aug,
   year         = 2021,
   publisher    = {Zenodo},
   version      = {v1.0},
   doi          = {10.5281/zenodo.5158528},
-  url          = {https://doi.org/10.5281/zenodo.5158528}
+  IGNORE_url          = {https://doi.org/10.5281/zenodo.5158528}
 }
